# drawdb-desktop

./: .gitignore  APPLY_PATCH.md  HANDOVER.md  README.ja.md  README.md  package.json  setup.ps1  setup.sh
.github/workflows/: ci.yml  release.yml
overlay/: package.json.fragment.md
overlay/src-tauri/: Cargo.toml  tauri.conf.json
overlay/src-tauri/capabilities/: default.json
overlay/src-tauri/icons/: icon.icns
overlay/src-tauri/src/: lib.rs  main.rs
overlay/src/context/: FilePathContext.jsx
overlay/src/data/: sqlBackend.js
overlay/src/data/exportSQL/: mysqlEnhanced.js  oracle.js  postgres.js
overlay/src/data/importSQL/: mysqlEnhanced.js  oracle.js  postgres.js
overlay/src/i18n/: index.js
overlay/src/i18n/locales/: en.js  ja.js
overlay/src/patches/: PATCHES.md  PATCHES_FULL.md
overlay/src/utils/: ddbpack.js  desktopIO.js  excelIO.js
scripts/: generate_icons.py
tests/: excel.smoke.mjs  i18n.smoke.mjs  smoke.mjs  validate-config.mjs
